--- a/Frontend/src/welcomepage.module.css
+++ b/Frontend/src/welcomepage.module.css
@@ -7,6 +7,8 @@ body {
   top: 50px;
   position: relative;
 }
+
+/*navbar*/
 .flexnav,
 .flexnav ul {
   list-style: none;
@@ -69,7 +71,7 @@ body {
   padding-right: 66px;
 }
 
-.image {
+.logo {
   height: 30%;
   margin: auto;
 }
@@ -79,3 +81,105 @@ body {
     font-size: 120%;
     margin-bottom: 10px;
 }
+
+/*graphics and content*/
+.image{
+  display: block;
+  align-items:center;
+  margin: 10px 100px 50px;
+  box-shadow: 5px 5px 5px 5px #041E42;
+}
+
+.image1{
+  display: block;
+  align-items:center;
+  margin: 100px 100px 50px;
+  box-shadow: 5px 5px 5px 5px #041E42;
+}
+
+.row1{
+  margin: auto;
+  display: flex;
+  align-items:center;
+  justify-content:center;
+  flex-direction: column;
+}
+
+.row2 {
+  margin:auto;
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: flex-start;
+  margin-top: 100px;
+}
+
+.row3 {
+  display: flex;
+  margin-top: 100px;
+}
+
+.h1{
+height: 50%;
+width: 70%;
+margin: 5% 20% 0% 20%
+}
+
+.h2{
+height: 50%;
+width: 70%;
+margin: 5% 20% 5% 20%
+}
+
+/*button*/
+.button50 {
+  appearance: button;
+  background-color: #000;
+  background-image: none;
+  border: 1px solid #000;
+  border-radius: 4px;
+  box-shadow: #fff 4px 4px 0 0,#000 4px 4px 0 1px;
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  display: inline-block;
+  font-family: ITCAvantGardeStd-Bk,Arial,sans-serif;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 20px;
+  margin: 0 5px 10px 0;
+  overflow: visible;
+  padding: 12px 40px;
+  text-align: center;
+  text-transform: none;
+  touch-action: manipulation;
+  user-select: none;
+  -webkit-user-select: none;
+  vertical-align: middle;
+  white-space: nowrap;
+}
+
+.button50:focus {
+ text-decoration: none;
+}
+
+.button50:hover {
+  text-decoration: none;
+}
+
+.button50:active {
+  box-shadow: rgba(0, 0, 0, .125) 0 3px 5px inset;
+  outline: 0;
+}
+
+.button50:not([disabled]):active {
+  box-shadow: #fff 2px 2px 0 0, #000 2px 2px 0 1px;
+  transform: translate(2px, 2px);
+}
+
+@media (min-width: 768px) {
+  .button-50 {
+    padding: 12px 50px;
+  }
+}
+
+
